# workplace-compliance-monitor

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.deepeval/: .deepeval_telemetry.txt
.github/workflows/: ci.yml
app/: main.py  models.py  services.py
tests/: test_api.py  test_evals_compliance.py
